--- a/src/design.ui
+++ b/src/design.ui
@@ -37,6 +37,9 @@
     </property>
    </widget>
    <widget class="QLineEdit" name="inputWrapperField">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>40</x>
@@ -49,7 +52,7 @@
      <bool>true</bool>
     </property>
     <property name="placeholderText">
-     <string>Input C++ wrapper</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="inputVerilogButton">
@@ -185,6 +188,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="inputWrapperButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>610</x>
@@ -198,9 +204,12 @@
     </property>
    </widget>
    <widget class="QRadioButton" name="cppRadioButton">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>410</x>
       <y>250</y>
       <width>51</width>
       <height>23</height>
@@ -210,13 +219,13 @@
      <string>C++</string>
     </property>
     <property name="checked">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QRadioButton" name="systemCRadioButton">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>300</x>
       <y>250</y>
       <width>81</width>
       <height>23</height>
@@ -224,6 +233,22 @@
     </property>
     <property name="text">
      <string>SystemC</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>250</y>
+      <width>71</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Binary</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
